# YurOTS

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
docker/: entrypoint.sh  healthcheck.sh
ots/: CMakeLists.txt  DEPLOYMENT.md  MODERNIZATION.md  README.md
ots/cmake/: BuildVendoredLua.cmake
ots/source/: account.h  actions.cpp  commands.cpp  creature.h  definitions.h  exception.cpp  fileloader.cpp  fileloader.h  game.cpp  game.h  guilds.cpp  houses.cpp  iomapbin.cpp  iomapotbm.cpp  iomapxml.cpp  ioplayerxml.cpp  item.h  itemloader.h  items.cpp  items.h  logger.cpp  logger.h  loginqueue.cpp  luascript.cpp  luascript.h  magic.h  monster.h  monsters.cpp  networkmessage.cpp  npc.cpp  npc.h  otserv.cpp  otsystem.h  protocol76.cpp  pvparena.cpp  readables.cpp  spawn.cpp  spawn.h  spells.cpp  spells.h  (+4 more)
pterodactyl/: egg-yurots.json  start.sh
